# esp32-idf-sqlite3

./: CMakeLists.txt  README.md  README.rst  component.mk  config_ext.h  esp32.c  shox96_0_2.c  shox96_0_2_0.c
components/sqlite3/: Kconfig  component.mk  esp32.c
components/sqlite3/include/: assert.h
examples/sqlite3/sd_mmc/: CMakeLists.txt  Makefile  README.md  sdkconfig
examples/sqlite3/sd_mmc/main/: CMakeLists.txt  sd_mmc.c
examples/sqlite3/spiffs/: CMakeLists.txt  Makefile  README.md  partitions_singleapp_fat.csv  sdkconfig
examples/sqlite3/spiffs/main/: CMakeLists.txt  spiffs.c
private_include/: assert.h  esp_idf_compat.h  shox96_0_2.h
